@@ -471,11 +471,20 @@ class Version(object):
           ['xserver', 'X11 servers', 0, 1 ],
       ]],
       [ '_src', 'Source (and debug )?sets', 0, [
-          ['syssrc', 'Kernel sources', 0, 1],
-          ['src', 'Base sources', 0, 1],
-          ['sharesrc', 'Share sources', 0, 1],
-          ['gnusrc', 'GNU sources', 0, 1],
-          ['xsrc', 'X11 sources', 0, 1],
+          # The lack of an "es" after "sourc" is deliberate.
+          # The source sets are displayed in a pop-up box atop
+          # the main distribution set list, and as of source
+          # date 2019.09.12.06.19.47, the "es" in "Share sources"
+          # happens to land exactly on top of an existing "es"
+          # from the word "Yes" in the underlying window.
+          # Curses, eager to to optimize, will reuse that
+          # existing "es" instead of outputting it anew, causing
+          # the pattern not to match if it includes the "es".
+          ['syssrc', 'Kernel sourc', 0, 1],
+          ['src', 'Base sourc', 0, 1],
+          ['sharesrc', 'Share sourc', 0, 1],
+          ['gnusrc', 'GNU sourc', 0, 1],
+          ['xsrc', 'X11 sourc', 0, 1],
           ['debug', '(debug sets)|(Debug symbols)', 0, 1],
           ['xdebug', '(debug X11 sets)|(X11 debug symbols)', 0, 1],
       ]]
